Fixed horizontal scroll

--- a/src/app/pages/pages.component.css
+++ b/src/app/pages/pages.component.css
@@ -55,6 +55,15 @@
   /* color: #c2c2c2; */
 }
 
+.content-inverse {
+  background-color: #ffffff;
+  padding: 100px;
+  margin-left: -15px;
+  margin-right: -15px;
+  margin-top: 13%;
+  color: #000;
+}
+
 .centerheader {
   text-align: center;
   margin-bottom:100px;
